--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "mongoose": "^7.2.3"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.3",
+    "validator": "^13.9.0"
   }
 }
